src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.sidebar {
  @apply h-full;
  @apply flex;
  @apply flex-col;
  @apply justify-center;
  @apply items-center;
  @apply p-0;
  @apply opacity-25;
}

.sidebar:hover {
  @apply opacity-75;
}

.content {
  @apply h-screen;
  @apply w-screen;
  @apply flex;
  @apply flex-row;
  @apply justify-between;
  @apply items-center;
  @apply text-white;
  @apply bg-gray-700;
  @apply font-sans;
}

.project-tag {
  @apply inline-block;
  @apply bg-gray-200;
  @apply rounded-full;
  @apply px-3;
  @apply py-1;
  @apply text-sm;
  @apply font-semibold;
  @apply text-gray-700;
  @apply mr-2;
  @apply mb-2;;
}

.project-tag:hover {
  @apply bg-blue-200;
}

h1 {
  @apply text-6xl;
}
h2 {
  @apply text-5xl;
}
h3 {
  @apply text-4xl;
}
h4 {
  @apply text-3xl;
}

h5 {
  @apply text-xl;
}

a {
  @apply text-red-500;
}

a:visited {
  @apply text-red-500;
}

a:hover {
  @apply text-red-400;
}

